@startuml

title __MAIN's Class Diagram__\n

  namespace com.unisa.cinehub {
    namespace views.main {
      class com.unisa.cinehub.views.main.MainView {
          - menu : Tabs
          + MainView()
          # afterNavigation()
          - createHeader()
          {static} - createMenuTabs()
          {static} - createTab()
          {static} - getAvailableTabs()
          - getTabForComponent()
      }
    }
  }
  

  namespace com.unisa.cinehub {
    namespace views.main {
      class com.unisa.cinehub.views.main.MenuATendina {
          - badge : DefaultBadgeHolder
          - notifications : DefaultNotificationHolder
          + MenuATendina()
      }
    }
  }
  

  com.unisa.cinehub.views.main.MainView -up-|> com.vaadin.flow.component.applayout.AppLayout
  com.unisa.cinehub.views.main.MenuATendina -up-|> com.github.appreciated.app.layout.component.router.AppLayoutRouterLayout


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
